--- a/data/references_data.bib
+++ b/data/references_data.bib
@@ -1,6 +1,6 @@
 @Article{Adams_1984,
   year = {1984},
-  author = {MA Adams and PM Attiwill},
+  author = {M. A. Adams and P. M and {Attiwill}},
   journal = {Australian Journal of Botany},
   title = {{Role of Acacia spp. in nutrient balance and cycling in regenerating Eucalyptus regnans F. Muell. forests. I. Temporal changes in biomass and nutrient content}},
   volume = {32},
@@ -59,7 +59,7 @@
 
 @Article{Ashton_1975,
   year = {1975},
-  author = {DH Ashton},
+  author = {D. H. Ashton},
   journal = {Australian Journal of Botany},
   title = {{Studies of litter in Eucalyptus regnans forests}},
   volume = {23},
@@ -93,7 +93,7 @@
 
 @Article{Attiwill_1980,
   year = {1980},
-  author = {PM Attiwill},
+  author = {P. M. Attiwill},
   journal = {Australian Journal of Botany},
   title = {{Nutrient cycling in a Eucalyptus obliqua (L'Herit.) forest IV: Nutrient uptake and nutrient return}},
   volume = {28},
@@ -113,7 +113,7 @@
   year = {1981},
   title = {{Flora of Australia}},
   publisher = {AGPS},
-  url = {www.environment.gov.au/biodiversity/abrs/online-resources/flora/main/},
+  url = {http://www.environment.gov.au/biodiversity/abrs/online-resources/flora/main/},
 }
 
 @Article{Bean_1997,
@@ -231,7 +231,7 @@
   title = {{Trait measurements for Australian rainforest species}},
   year = {2016},
   published = {Brisbane Rainforest Action and Information Network},
-  url = {www.brisrain.org.au/},
+  url = {http://www.brisrain.org.au/},
 }
 
 @Article{Briggs_2010,
@@ -425,10 +425,12 @@
   doi = {10.1111/j.1461-0248.2009.01285.x},
 }
 
-@Unpublished{Cheal_2017,
-  year = {2017},
-  author = {David Cheal and Annette Muir and Michele Kahout and Matthew White},
-  title = {{Unpublished data: Victorian Fire Response Dataset, Department of Environment, Land, Water and Planning, Victoria}},
+@Report{Cheal_2017,
+  year = {2010},
+  author = {David Cheal},
+  title = {{Growth stages and tolerable fire intervals for Victoria's native vegetation data sets}},
+  institution = {Victorian Government Department of Sustainability and Environment Melbourne},
+  type = {Fire and adaptive management, report no. 84},
 }
 
 @Article{Cheesman_2020,
@@ -549,7 +551,7 @@
   author = {{Centre for Plant Biodiversity Research}},
   title = {{EUCLID 2.0: Eucalypts of Australia}},
   year = {2002},
-  url = {apps.lucidcentral.org/euclid/text/intro/index.html},
+  url = {http://apps.lucidcentral.org/euclid/text/intro/index.html},
 }
 
 @Article{Craven_1987,
@@ -584,7 +586,7 @@
 
 @Article{Cromer_1975,
   year = {1975},
-  author = {R.N. Cromer and M. Raupach and A.R.P. Clarke and J.N. Cameron},
+  author = {R. N. Cromer and M. Raupach and A. R. P. Clarke and J. N. Cameron},
   journal = {Appita Journal},
   title = {{Eucalypt plantations in Australia - the potential for intensive production and utilization.}},
   volume = {29},
@@ -1234,7 +1236,7 @@
 @Online{GrassBase_2014,
   author = {W.D. Clayton and M.S. Vorontsova and K.T. Harman & H. Williamson},
   year = {2006},
-  url = {www.kew.org/data/grasses-db.html},
+  url = {http://www.kew.org/data/grasses-db.html},
   title = {{GrassBase - The online world grass flora}},
 }
 
@@ -1499,7 +1501,7 @@
 
 @Article{Hopmans_1993,
   year = {1993},
-  author = {P. Hopmans and H.T.L. Stewart and D.W. Flinn},
+  author = {P. Hopmans and H. T. L. Stewart and D. W. Flinn},
   journal = {Forest Ecology and Management},
   title = {{Impacts of harvesting on nutrients in a eucalypt ecosystem in southeastern Australia}},
   volume = {59},
@@ -1543,7 +1545,7 @@
   author = {{World Agroforestry Centre (ICRAF)}},
   title = {{The wood density database}},
   year = {2009},
-  url = {www.worldagroforestry.org/output/wood-density-database},
+  url = {http://www.worldagroforestry.org/output/wood-density-database},
 }
 
 @TechReport{Ilic_2000,
@@ -1675,35 +1677,35 @@
   author = {{Royal Botanic Gardens Kew}},
   year = {2019},
   title = {{Seed Information Database (SID) and Seed Bank Database}},
-  url = {data.kew.org/sid/},
+  url = {http://data.kew.org/sid/},
 }
 
 @Online{Kew_2019_2,
   author = {{Royal Botanic Gardens Kew}},
   year = {2019},
   title = {{Seed Information Database (SID) and Seed Bank Database}},
-  url = {data.kew.org/sid/},
+  url = {http://data.kew.org/sid/},
 }
 
 @Online{Kew_2019_4,
   author = {{Royal Botanic Gardens Kew}},
   year = {2019},
   title = {{Oil content data from Seed Information Database (SID) and Seed Bank Database}},
-  url = {data.kew.org/sid/},
+  url = {http://data.kew.org/sid/},
 }
 
 @Online{Kew_2019_5,
   author = {{Royal Botanic Gardens Kew}},
   year = {2019},
   title = {{Seed dispersal data from the Seed Information Database (SID) and Seed Bank Database}},
-  url = {data.kew.org/sid/},
+  url = {http://data.kew.org/sid/},
 }
 
 @Online{Kew_2019_6,
   author = {{Royal Botanic Gardens Kew}},
   year = {2019},
   title = {{Germination data from the Seed Information Database (SID) and Seed Bank Database}},
-  url = {data.kew.org/sid/},
+  url = {http://data.kew.org/sid/},
 }
 
 @Unpublished{Kirkpatrick_2020,
@@ -1779,7 +1781,7 @@
 
 @Thesis{Lambert_1979,
   year = {1979},
-  author = {M.J. Lambert},
+  author = {M. J. Lambert},
   title = {{Sulphur relationships of native and exotic tree species}},
   type = {Masters},
   institution = {Macquarie University, Sydney},
@@ -1862,13 +1864,12 @@
   doi = {10.1111/1365-2745.12035},
 }
 
-@Misc{Lawson_2015,
+@Article{Lawson_2015,
   year = {2015},
   author = {James R. Lawson and Kirstie A. Fryirs and Michelle R. Leishman},
   title = {{Data from: Hydrological conditions explain wood density in riparian plants of south-eastern Australia}},
   doi = {10.5061/dryad.72h45},
-  publisher = {Dryad Digital Repository},
-  keywords = {determinants of plant community diversity and structure, community assembly, climate change, ecohydrology, ecological strategy, environmental unpredictability, functional traits, disturbance, riparian, wood density, south-east Australia},
+  journal = {Dryad Digital Repository},
 }
 
 @Thesis{Laxton_2005,
@@ -2091,11 +2092,11 @@
   doi = {10.1071/bt9950039},
 }
 
-@Misc{Maslin_2012,
+@Book{Maslin_2012,
   author = {Bruce Maslin},
-  title = {{WATTLE: Acacias of Australia}},
-  year = {2012},
-  publisher = {Australian Biological Resources Study},
+  title = {{WATTLE, Interactive Identification of Australian Acacia. Version 2}},
+  year = {2014},
+  publisher = {Australian Biological Resources Study, Canberra},
 }
 
 @Article{McCarthy_2017,
@@ -2318,7 +2319,7 @@
 
 @Article{Moore_1967,
   year = {1967},
-  author = {AW Moore and JS Russell and JE Coaldrake},
+  author = {A. W. Moore and J. S. Russell and J. E. Coaldrake},
   journal = {Australian Journal of Botany},
   title = {{Dry matter and nutrient content of a subtropical semiarid forest of Acacia harpophylla F. Muell. (Brigalow)}},
   volume = {15},
@@ -2329,7 +2330,7 @@
 
 @Unpublished{Moore_2019,
   year = {2019},
-  author = {{Moore} and {B.D.} and {DeGabriel} and {J.L.}},
+  author = {Ben D. Moore and Jane L. DeGabriel},
   title = {{Unpublished data: Leaf traits of the Eucalyptus series Siderophloiae, Western Sydney University}},
 }
 
@@ -2381,10 +2382,14 @@
   doi = {10.1071/bt14117},
 }
 
-@Unpublished{Munroe_2019,
-  year = {2019},
-  author = {{Munroe} and {S.E.M.} and {Guerin} and {G.R.} and {and Sparrow} and {B.}},
-  title = {{Unpublished data: TERN plant photosynthetic pathway trait dataset, version 1.0, The University of Adelaide.}},
+@Article{Munroe_2019,
+  year = {2021},
+  author = {Samantha E. M. Munroe and Francesca A. McInerney and Jake Andrae and Nina Welti and Greg R. Guerin and Emrys Leitch and Tony Hall and Steve Szarvas and Rachel Atkins and Stefan Caddy-Retalic and Ben Sparrow},
+  journal = {Scientific Data},
+  title = {{The Photosynthetic Pathways of Plant Species Surveyed in {{Australia}}'s National Terrestrial Monitoring Network}},
+  volume = {8},
+  pages = {97},
+  doi = {10.1038/s41597-021-00877-z},
 }
 
 @Online{NHNSW_2016,
@@ -2392,7 +2397,7 @@
   title = {{Trait measurements for NSW rainforest species from PLantNET}},
   year = {2016},
   publisher = {National Herbarium of NSW},
-  url = {plantnet.rbgsyd.nsw.gov.au/},
+  url = {http://plantnet.rbgsyd.nsw.gov.au/},
 }
 
 @Article{Nicholson_2017,
@@ -2416,11 +2421,13 @@
   doi = {10.1071/bt05061},
 }
 
-@Unpublished{Nicolle_2018,
+@Report{Nicolle_2018,
   year = {2018},
   author = {Dean Nicolle},
-  title = {{Unpublished data: Classification of the Eucalypts (Angophora, Corymbia and Eucalyptus) Version 3., Currency Creek Arboretum Eucalypt Research}},
-  weblink = {www.dn.com.au/Classification-Of-The-Eucalypts.pdf},
+  title = {{Classification of the Eucalypts (Angophora, Corymbia and Eucalyptus) Version 3}},
+  institution = {Currency Creek Arboretum Eucalypt Research'},
+  type = {online},
+  url = {http://www.dn.com.au/Classification-Of-The-Eucalypts.pdf},
 }
 
 @Article{Niinemets_2009,
@@ -2434,16 +2441,18 @@
   doi = {10.1093/jxb/erp045},
 }
 
-@Unpublished{NSWFRD_2014,
+@Report{NSWFRD_2014,
   year = {2014},
   author = {Belinda Kenny and Corinna Orscheg and Elizabeth Tasker and Malcolm A. Gill and Ross Bradstock},
-  title = {{Unpublished data: NSW Flora Fire Response Database, v2.1 updated May 2014, NSW Department of Planning Industry and Environment.}},
+  title = {{NSW Flora Fire Response Database, v2.1}},
+  institution = {NSW Department of Planning Industry and Environment},
+  type = {database},
 }
 
 @Online{NTH_2014,
   author = {{Northern Territory Herbarium}},
   year = {2014},
-  url = {www.lrm.nt.gov.au/plants-and-animals/herbarium/darwin_flora_online},
+  url = {http://www.lrm.nt.gov.au/plants-and-animals/herbarium/darwin_flora_online},
   title = {{Flora of the Darwin Region Online}},
 }
 
@@ -2648,21 +2657,21 @@
   author = {{Royal Botanic Gardens Kew}},
   year = {2014},
   title = {{Seed Information Database (SID)}},
-  url = {data.kew.org/sid/},
+  url = {http://data.kew.org/sid/},
 }
 
 @Online{RBGSYD_2014,
   author = {{Royal Botanic Gardens Sydney}},
   title = {{PLantNET}},
   year = {2014},
-  url = {plantnet.rbgsyd.nsw.gov.au/search/simple.htm},
+  url = {http://plantnet.rbgsyd.nsw.gov.au/search/simple.htm},
 }
 
 @Online{RBGSYD_2014_2,
   author = {{Royal Botanic Gardens Sydney}},
   title = {{PLantNET: NSW flora online}},
   year = {2014},
-  url = {plantnet.rbgsyd.nsw.gov.au/},
+  url = {http://plantnet.rbgsyd.nsw.gov.au/},
 }
 
 @Article{Read_2003,
@@ -2707,7 +2716,7 @@
 }
 
 @Unpublished{Rice_1991,
-  author = {B. Rice},
+  author = {Barbara Rice},
   year = {1991},
   title = {{Unpublished data: Growth form of Kakadu plant species, Macquarie University}},
 }
@@ -3142,10 +3151,12 @@
   doi = {10.1890/04-0920},
 }
 
-@Unpublished{Taseski_2017,
+@Thesis{Taseski_2017,
+  type = {Hons},
   year = {2017},
   author = {Guy Taseski and David A. Keith and Rhiannon L. Dalrymple and William K. Cornwell},
-  title = {{Unpublished data: Shifts in fine root traits within and among species along a small-scale hydrological gradient, University of New South Wales}},
+  title = {{Shifts in fine root traits within and among species along a small-scale hydrological gradient}},
+  institution = {University of New South Wales},
 }
 
 @Article{Taylor_2008,
@@ -3197,7 +3208,7 @@
   year = {2009},
   title = {{Flora of Tasmania Online}},
   publisher = {Tasmanian Museum & Art Gallery (Hobart)},
-  url = {www.tmag.tas.gov.au/floratasmania},
+  url = {http://www.tmag.tas.gov.au/floratasmania},
 }
 
 @Article{Tng_2013,
@@ -3378,7 +3389,7 @@
   year = {1998},
   title = {{FloraBase: The Western Australian flora}},
   publisher = {Department of Parks and Wildlife},
-  url = {florabase.dpaw.wa.gov.au},
+  url = {http://florabase.dpaw.wa.gov.au},
 }
 
 @Online{WAH_2016,
@@ -3386,7 +3397,7 @@
   year = {2016},
   title = {{FloraBase: The western Australian flora}},
   publisher = {Department of Parks and Wildlife},
-  url = {florabase.dpaw.wa.gov.au/},
+  url = {http://florabase.dpaw.wa.gov.au/},
 }
 
 @Article{Warren_2005,
@@ -3477,10 +3488,12 @@
   isbn = {9780642568168},
 }
 
-@Unpublished{White_2020,
+@Report{White_2020,
   year = {2020},
-  author = {Matthew White and Steven Sinclair and {and Doug Frood}},
-  title = {{Unpublished data: Victorian Vital Attributes Database, Department of Environment, Land, Water and Planning, Victoria}},
+  author = {Matthew White and Steven Sinclair and Doug Frood},
+  title = {{Victorian Vital Attributes Database}},
+  institution = {Department of Environment, Land, Water and Planning, Victoria},
+  type = {database},
 }
 
 @Article{Williams_2005,
@@ -3531,6 +3544,17 @@
   title = {{Unpublished data: Seed mass reserve data for various species in NSW, Macquarie University}},
 }
 
+@Article{Wright_2001_b,
+  year = {2001},
+  author = {I. J. Wright and P. B. Reich and M. Westoby},
+  journal = {Functional Ecology},
+  title = {{Strategy shifts in leaf physiology, structure and nutrient content between species of high- and low-rainfall and high- and low-nutrient habitats}},
+  volume = {15},
+  number = {4},
+  pages = {423--434},
+  doi = {10.1046/j.0269-8463.2001.00542.x},
+}
+
 @Article{Wright_2002,
   author = {Ian J. Wright and Mark Westoby},
   year = {2002},
@@ -3565,7 +3589,7 @@
 }
 
 @Unpublished{Wright_2008,
-  author = {Ian Wright},
+  author = {Ian J. Wright},
   year = {2008},
   title = {{Unpublished data: Trait data for Northern Territory savanna species, Macquarie University}},
 }
@@ -3602,11 +3626,11 @@
   title = {{Unpublished data: Hydraulic traits for NSW plant species from four field sites, Macquarie University}},
 }
 
-@Misc{Zanne_2009,
+@Article{Zanne_2009,
   author = {Amy E. Zanne and G. Lopez-Gonzalez and David A. Coomes and Jugo Ilic and Steven Jansen and Simon L. Lewis and Regis B. Miller and Nathan G. Swenson and Michael C. Wiemann and Jerome Chave},
   year = {2009},
   title = {{Data from: Towards a worldwide wood economics spectrum}},
-  publisher = {Dryad Digital Repository},
+  journal = {Dryad Digital Repository},
   doi = {10.5061/dryad.234},
 }
 
