--- a/data/references_ms.bib
+++ b/data/references_ms.bib
@@ -65,7 +65,7 @@
                    Australian flora}},
   year = {2021},
   journal = {Zenodo},
-  volume = {v3.0.0},
+  volume = {v3.0.2},
   doi = {10.5281/zenodo.3583418},
 }
 
@@ -224,6 +224,7 @@
   author = {Mark D Wilkinson and Michel Dumontier and IJsbrand Jan Aalbersberg and Gabrielle Appleton and Myles Axton and Arie Baak and Niklas Blomberg and Jan-Willem Boiten and Luiz Bonino {da Silva Santos} and Philip E Bourne and others},
   journal = {Scientific data},
   volume = {3},
+  pages = {160018},
   year = {2016},
   publisher = {Nature Publishing Group},
 }
